# SDL_Wrapper

./: CMakeLists.txt  README.md
.cache/clangd/index/: Color.cpp.98F897415B0BB778.idx  Core.cpp.0DB11F642DC269F2.idx  Core.hpp.CB1A4F34792A1A29.idx  IMG.c.40990A96B215EC1E.idx  IMG_WIC.c.E833160197D465A9.idx  IMG_avif.c.FFC81A0ADD37114F.idx  IMG_bmp.c.33234534C409D37F.idx  IMG_gif.c.452A13D9AB651F27.idx  IMG_jpg.c.2D39D0DB8A7C1743.idx  IMG_jxl.c.1825B310E11ACE6A.idx  IMG_lbm.c.620F77CC1190ED33.idx  IMG_pcx.c.EBE31C2737002771.idx  IMG_png.c.2C0FAEBA4D4BE75E.idx  IMG_pnm.c.0981C9EA16383A24.idx  IMG_qoi.c.BB280DC44F9469EB.idx  IMG_stb.c.06A6FDF89325C300.idx  IMG_svg.c.519055DE70FCAA0B.idx  IMG_tga.c.39939130FCFD59EE.idx  IMG_tif.c.D61D2C6A44E42FCC.idx  IMG_webp.c.B4BE1817E62DB72B.idx  IMG_xcf.c.CB86E849C0D75B3C.idx  IMG_xpm.c.E58A328009761094.idx  IMG_xv.c.B5D49DD9C6FD3728.idx  Point.cpp.C1173D3BB8414308.idx  Point.hpp.D9702904681D7F62.idx  SDL.c.AAED0D836F3DCBD1.idx  SDL_RLEaccel.c.384AD9D7ECB610C2.idx  SDL_RLEaccel_c.h.59FF584DA9671FB7.idx  SDL_alsa_audio.c.2C743BF31A0C9A53.idx  SDL_alsa_audio.h.B3BAAF50E86B4573.idx  SDL_assert.c.74E485A26D747690.idx  SDL_assert_c.h.B2F2A315B6B94E45.idx  SDL_atomic.c.403E77AFF5BA86DD.idx  SDL_audio.c.44D1199829A9B763.idx  SDL_audio_c.h.F57DDFFF223B2303.idx  SDL_audio_channel_converters.h.B1FBBD7C84B54B38.idx  SDL_audio_resampler_filter.h.2627AF7665D397C4.idx  SDL_audiocvt.c.4C01F31CB9929E54.idx  SDL_audiodev.c.FE97A21BC8D66197.idx  SDL_audiodev_c.h.42D4B6E1BAB9022E.idx  (+496 more)
src/Base/Color/: CMakeLists.txt  Color.cpp  Color.hpp
test/: main.cpp
(+9 files in other folders)
